# water-potability

./: Code.ipynb  Code.py  codebrouillon.ipynb  pyproject.toml
Data/: Code.py
