[project]
name = "water-potability"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "ipykernel>=6.29.5",
    "ipython>=8.12.3",
    "pandas>=2.0.3",
    "pip>=24.3.1",
    "scikit-learn>=1.3.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
