[project]
name = "water-potability"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.3",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pip>=24.3.1",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
]
